--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.6.5",
     "mobile-device-detect": "^0.4.3",
     "vue": "^3.0.0",
+    "vue-meta": "^3.0.0-alpha.2",
     "vue-router": "^4.0.0-0",
     "vueperslides": "^3.2.0"
   },
