--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@fortawesome/fontawesome-free": "^5.15.3",
     "bootstrap": "^5.0.0-beta3",
     "core-js": "^3.6.5",
+    "lodash": "^4.17.21",
     "mobile-device-detect": "^0.4.3",
     "vue": "^3.0.0",
     "vue-meta": "^3.0.0-alpha.2",
